Edit document after Alexis's comments

--- a/abstract.tex
+++ b/abstract.tex
@@ -4,8 +4,8 @@
 
   % Please put \noindent before each paragraph of the abstract!
 
-  \noindent Of the roughly seven thousand languages currently spoken, less than fifty have a significant digital presence. In order for a language to be used digitally and to survive in the long term, its speakers may need to develop computational resources: orthographies, dictionaries, grammars, spell checkers, parsers, and more. Instead of depending on large providers, researchers and communities can leverage the open source code methodology as a means of bootstrapping digital language development. In this thesis, I discuss the state of the field for low resource languages, what open source licensing means and how it can help language communities. I provide two cases studies, looking in detail at Gaelic and Naskapi, and I describe a decentralised, crowd-sourced database I have developed to catalogue open source code which can be used for low resource languages. Looking to the future, I suggest steps for developing and using code going forwards.
+  \noindent Of the roughly seven thousand languages currently spoken, fewer than fifty have a significant digital presence. In order for a language to be used digitally and to survive in the long term, its speakers may need to develop computational resources: orthographical scripts, dictionaries, grammars, spell checkers, parsers, and more. Instead of depending on large providers, researchers and communities can leverage the open source code methodology as a means of bootstrapping digital language development. In this thesis, I discuss the state of the field for low resource languages, what open source licensing means and how it can help language communities. I provide two case studies, looking in detail at Gaelic and Naskapi, and I describe a decentralised, crowd-sourced database I have developed to catalogue open source code which can be used for low resource languages. Looking to the future, I suggest steps for developing and using code going forwards.
 
-  \noindent My specific contributions in this thesis include not only the first published analysis of the state of the field for open source code specifically regarding low resource languages, and an exposition of the only database of solely open source resources, but also independent fieldwork on Naskapi that pertains to its current digital presence on the web. I also outline how researchers and developers can change their processes to help make their work more effectual in the long term.
+  \noindent My specific contributions in this thesis include not only the first published analysis of the state of the field for open source code specifically regarding low resource languages, and an exposition of the only database of solely open source resources, but also independent fieldwork on Naskapi that pertains to its current digital presence on the web. I also outline how language technologists can change their processes to help make their work more effectual in the long term.
 
 \end{abstract}
