Clarify citation of websites

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -12,4 +12,4 @@ Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project
 
 All code segments mentioned in this thesis are open source in a Bash script at https://github.com/RichardLitt/thesis\footnote{\href{https://github.com/RichardLitt/thesis}{https://github.com/RichardLitt/thesis}. \last{May~4}} and on IPFS under the hash {\tt Qmddxu77uTb1UGi4Vkr5\-g79RedyFVLeySZ4ZL\-2WVJtmEqC}\footnote{\href{https://ipfs.io/ipfs/Qmddxu77uTb1UGi4Vkr5g79RedyFVLeySZ4ZL2WVJtmEqC}{https://ipfs.io/ipfs/Qmddxu77uTb1UGi4Vkr5g79RedyFVLeySZ4ZL2WVJtmEqC}. \last{May~4}}; to run them, download {\tt commands.sh} and type {\tt sh commands.sh} in your terminal.
 
-Where it was more efficient to refer to a website as a footnote, I have done so; some of the resources thus acknowledged may have a publication that I also could have referred to. I have had to date no proofreaders for this paper, so all errors are mine and mine alone. I have also endeavoured to make reading this interesting, and if my particular brand of dry humour comes off as egotistical, I had it coming. My apologies.
+Where it was more efficient to refer to a website as a footnote, I have done so; some of the resources thus acknowledged may have a publication that I also could have referred to. If I have unintentionally failed to reference these publications, the fault is mine. I have had to date no proofreaders for this paper, so all errors are mine and mine alone. I have also endeavoured to make reading this interesting, and if my particular brand of dry humour comes off as egotistical, I had it coming. My apologies.
