Remove the dash for low-resources

--- a/low-resource-languages.tex
+++ b/low-resource-languages.tex
@@ -10,7 +10,7 @@ In this section, I will outline the state of low resource languages. First I wil
 
 Before going further, it makes sense to define what the terms \emph{endangered}, \emph{minority}, \emph{low} and \emph{under-resourced}, and other terms like \emph{threatened} mean when they refer to a language. Each has slightly different meanings in different contexts, and according to the scale and metric applied.
 
-In this section, I will generally define these terms: \textit{endangered}, \textit{moribund}, \textit{extinct}, \textit{dormant}, \textit{revitalised}, \textit{historic} and \textit{constructed} languages; \textit{minority}, \textit{low-resource}, \textit{under-resourced}, \textit{incident} and \textit{surprise} languages; and finally \textit{computer} or \textit{computational} languages. This will help inform why I have chosen to focus on low resource languages, and specifically low resource natural languages with living populations.
+In this section, I generally define these terms: \textit{endangered}, \textit{moribund}, \textit{extinct}, \textit{dormant}, \textit{revitalised}, \textit{historic} and \textit{constructed} languages; \textit{minority}, \textit{low resource}, \textit{under resourced}, \textit{incident} and \textit{surprise} languages; and finally \textit{computer} or \textit{computational} languages. This helps inform why I have chosen to focus on low resource languages, and specifically low resource natural languages with living populations.
 
 All of these terms could be controversial in certain contexts, and work within larger frameworks and ontologies. I will cover some of these frameworks in Section~\ref{subsec:metrics} on metrics after giving this general overview of definitions.
 
