--- a/resources.tex
+++ b/resources.tex
@@ -61,7 +61,7 @@ I have already mentioned that An Cr\'ubad\'an \citep{scannell2007crubadan} is a 
 
 \item The Open Language Archives Community (OLAC) is a worldwide virtual library of language resources \citep{simons2003open},\footnote{\href{http://www.language-archives.org/}{http://www.language-archives.org/}. \last{May~2}} and contains thousands of cross-references to resources both on the web and in print form.
 
-\item Wikipedia,\footnote{\href{https://www.wikipedia.org/}{https://www.wikipedia.org/}. \last{May~2}} "the largest and most popular general reference work on the Internet" \citep{wiki:Wikipedia} has a nontrivial amount of articles on low-resource languages, many of which have references themselves to scholarly work. \citet{kornai2013digital}, among others, notes that Wiki\-pedia is one of the first ports-of-call for new language communities, and while it is not a precondition for having corpora on the web, it is a {\it sine qua non} for digital vitalisation. Thus Wikipedia has two purposes; documenting the language and its community (for instance, in the Naskapi Language article\footnote{\href{https://en.wikipedia.org/wiki/Naskapi\_language}{https://en.wikipedia.org/wiki/Naskapi\_language}. \last{May~2}}), and providing a space for corpus development in the target language itself (for instance, as in the Gaelic wikipedia\footnote{\href{https://gd.wikipedia.org/wiki/G\%C3\%A0idhlig}{https://gd.wikipedia.org/wiki/G\`aidhlig}. \last{May~3}}).
+\item Wikipedia,\footnote{\href{https://www.wikipedia.org/}{https://www.wikipedia.org/}. \last{May~2}} "the largest and most popular general reference work on the Internet" \citep{wiki:Wikipedia} has a nontrivial amount of articles on low resource languages, many of which have references themselves to scholarly work. \citet{kornai2013digital}, among others, notes that Wiki\-pedia is one of the first ports-of-call for new language communities, and while it is not a precondition for having corpora on the web, it is a {\it sine qua non} for digital vitalisation. Thus Wikipedia has two purposes; documenting the language and its community (for instance, in the Naskapi Language article\footnote{\href{https://en.wikipedia.org/wiki/Naskapi\_language}{https://en.wikipedia.org/wiki/Naskapi\_language}. \last{May~2}}), and providing a space for corpus development in the target language itself (for instance, as in the Gaelic wikipedia\footnote{\href{https://gd.wikipedia.org/wiki/G\%C3\%A0idhlig}{https://gd.wikipedia.org/wiki/G\`aidhlig}. \last{May~3}}).
 
 \item The World Atlas of Language Structures (WALS) \citep{wals} is a directory of typological features which also includes academic references for many of the over two thousand languages presented. WALS is a curated resource, largely made by a team of 55 experts, and hosted by the Max Planck Institute for Evolutionary Anthropology (the same as Glottlog, and as other resources such as PHOIBLE\footnote{\href{http://phoible.org/}{http://phoible.org/}. \last{May~2}} \citep{phoible} and DOBES\footnote{\href{http://dobes.mpi.nl/}{http://dobes.mpi.nl/}. \last{May~2}} \citep{wittenburg2003dobes} related to taking an inventory of language structures).
 \end{itemize}
