--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@
 \section{Introduction}
 \label{sec:intro}
 
-At least half of the world's 7000-odd languages will be extinct this century \citep{krauss92, grenoble2011cambridge}. Just over half of these languages have writing systems.\footnote{\href{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0}{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0}. \last{May 1}} It is estimated that fewer than 5\% of the world's languages are used online or have significant digital presence \citep{kornai2013digital} - meaning, basically, that they are used on the web or have substantial digital recordings.
+At least half of the world's 7000-odd languages will be extinct this century \citep{krauss92, grenoble2011cambridge}. Just over half of these languages have writing systems.\footnote{\href{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0}{https://www.ethnologue.com/enterprise-faq/how-many-languages-world-are-unwritten-0}. \last{May 1} Note that with all Ethnologue links to language data, there is an eventual paywall which inhibits access. Using a private browser session can normally circumvent this paywall adequately, although I am explicitly not recommending such a workaround here.} It is estimated that fewer than 5\% of the world's languages are used online or have significant digital presence \citep{kornai2013digital} - meaning, basically, that they are used on the web or have substantial digital recordings.
 
 The majority of the world's computational technology has been built using English - with English manuals, English interfaces, and by English speakers. The most prevalent language spoken by users of this technology is also English. There are a few languages - around thirty - with the combination of large populations with internet access, official governmental status, and industrial economies which affords them some native computational technology, in particular on the World Wide Web, the largest global network for sharing code and written material.
 
@@ -18,6 +18,8 @@ While the enterprise pathway for language resource development works well for la
 In this thesis, I examine methodology that can be used by linguists, researchers, and language developers to help their languages "digitally ascend" (as \citet{kornai2013digital} puts it) - to bootstrap their corpora creation, write grammars, transform other language's tools and research to their own languages, and to ultimately enable their communities to speak and share their knowledge computationally. This methodology goes under the broad label of \textit{open source} software. Open source software is code which has been developed and made available for free and under a permissive license, without concessions about how it is to be used or who uses it. This allows coders to use code which they personally have not built without allocating funds for it, thus freeing up significant portions of research and development costs for making tools. At present, the majority of the world's code depends on some level on open source software - for instance, Linux and much of the web depend on open source code.
 
 In the field of computational linguistics, however, there is a deficit of resources which are licensed and available as open source. This largely stems from the need to financially recoup expenses for development, on licenses mandated by research groups or military funders, and on a lack of awareness of how open source code works by developers. Another consideration is that an open source label does not ensure that the code is worth using, maintained, relevant, or in scope for a given domain.
+
+% General comment: it is of course personal preference, but I don't much like the use of future tense in describing the content of sections of a document that exists. I'd suggest rewording, for example:%- "Below, I go into further depth..."%- "Section 4 defines what open source is and talks about issues..."%etc.%%Same comment applies in later chapters, I am certain.
 
 Below, I go into further depth about the state of low resource languages (LRL) and computational resources in Section~\ref{sec:endlang}, and what different languages need in order to have digital presence in Section~\ref{sec:resources}. In Section~\ref{sec:open-source}, I define what open source is, and talk about issues relevant to open source code for LRLs. I then in Section~\ref{sec:lrl-code} talk about the state of the open source ecosystem for LRLs online, in particular focusing on a database of open source code that I have built with the help of researchers around the world.
 
