--- a/case-studies.tex
+++ b/case-studies.tex
@@ -87,7 +87,7 @@ Naskapi (autonymically \sylla{naskapi} naskapi or \sylla{iyuw iyimuun} iyuw iyim
 
 The Naskapi speak English as a first or second language, while the Innu speak French (and some speak three or all four languages). They moved to Kawawachikamach in the 1960s, after initially being resettled in Schefferville in the early 1950s. Some of the elders still remember being a nomadic people who followed caribou and were raised in the bush. However, half of the population is under the age of 16, and nationally the First Nations population is the largest growing population in Canada.\footnote{\href{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}{http://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm}. \last{May~2}}
 
-All of the Naskapi speak their own language regularly, in all contexts - excepting, perhaps, digitally. In the schools, there are Naskapi-only classes held until Grade 8 \citep{llewellyn2017oral}. While there are a few social workers, teachers, and nurses who speak solely English, most jobs in Kawawachikamach are held by Naskapi. There has been a long tradition of missionaries, and almost all of the Naskapi are Protestant. At church, they use Montagnais hymnals and a Montagnais bible.
+All of the Naskapi speak their own language regularly, in all contexts - excepting, perhaps, digitally. In the schools, there are Naskapi-only classes held until Grade 8 \citep{llewellyn2017oral}. While there are a few social workers, teachers, and nurses who speak solely English, most jobs in Kawawachikamach are held by Naskapi. There has been a long tradition of missionaries, and almost all of the Naskapi are Protestant. At church, they use Montagnais hymnals and a Montagnais Bible.
 
 \subsubsection{Language vitality status}
 \label{sec:naskapi-vitality-status}
